--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,18 @@ body{
   background-color: #E4F9F5;
 }*/
 h1{
+  margin: 0px;
   font-size: 5.625rem;
-  margin-top: 50px auto 0 auto;
   color: #66BFBF;
   font-family: 'Sacramento', cursive;
 
 }
 h2{
+  margin: 0px;
   color: #66BFBF;
   font-size: 2.5rem;
   font-weight: normal;
   font-family: 'Montserrat', sans-serif;
-  padding-bottom: 10PX;
 }
 h3{
   color: #11999E;
